fixing spacing on landing page

--- a/valley_girl_app/app/assets/stylesheets/main.scss.css
+++ b/valley_girl_app/app/assets/stylesheets/main.scss.css
@@ -10,13 +10,14 @@
 .links-container {
   float: right;
   margin-top: -4em;
-  width: 100%;
+  padding: 2em;
+  width: 95%;
 }
 
 .link {
   display: inline-block;
   width: 20%;
-  margin: 1em;
+  margin: 2em;
 }
 
 #landing-page-header {
